# AdventOfCode

./: .gitignore  LICENSE  README.md
2015/c#/: .gitignore  AoC-2015.csproj  AoC-2015.sln  Day01.cs
2015/go/: go.mod  go.sum  main.go
2015/go/day1/: day1.go
2015/go/day2/: day2.go  day2_test.go
2015/go/day3/: day3.go  day3_test.go
2015/go/day4/: day4.go  day4_test.go
2015/go/day5/: day5.go  day5_test.go
2015/go/day6/: day6.go
2015/go/day7/: day7.go
2015/go/day8/: day8.go
2015/go/day9/: day9.go  day9_test.go
2021/go/: go.mod
2022/: go.mod  main.go
2022/_template/: dayN.go  dayN_test.go
2022/day1/: main.rs
2022/day10/: day10_test.go
2022/day11/: day11.go
2022/day12/: day12_test.go
2022/day14/: day14.go
2022/day2/: day2.go
2022/day3/: day3_test.go
2022/day4/: day4.go  day4_test.go
2022/day5/: day5.go
2022/day6/: day6_test.go
2022/day7/: day7.go  day7_test.go
2022/day8/: day8_test.go
2022/day9/: day9.go
2022/go/: go.mod  go.sum  main.go
2022/utils/: grid.go  input.go
2023/: go.mod  main.go
2023/_template/: dayN.go
2023/day1/: day1.go  day1_test.go
2023/day2/: day2.go  day2_test.go
2023/day3/: day3.go
2023/go/: go.mod  main.go
2023/rust/: Cargo.toml  README.md
2023/rust/day1/src/: main.rs
2023/rust/day2/src/: main.rs
2023/rust/day3/src/: main.rs
2023/rust/day4/src/: main.rs
2023/rust/src/: lib.rs
2023/utils/: convert.go
2024/csharp/: csharp.sln
2024/go/: go.mod  go.sum  go.work  main.go
utils/go/: convert.go  coordinate.go  genericgrid.go  go.mod  grid.go  input.go  mapgrid.go  slice.go
(+77 files in other folders)
